Fix alignment

--- a/src/assets/src/frontend/scss/plugin/modules/_modal.scss
+++ b/src/assets/src/frontend/scss/plugin/modules/_modal.scss
@@ -26,7 +26,7 @@
   }
 
   @media (max-width: 550px) {
-    text-align: left;
+    text-align: center;
   }
 }
 
